WSO2_APIM_KUBE_ISTIO/internal-gw/service-gw.yaml
apiVersion: v1
kind: Service
metadata:
  name: apim-gw-wso2am-universal-gw-service
  namespace: wso2-internal-gw
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: pass-through-http
    port: 8280
    protocol: TCP
    targetPort: 8280
  - name: pass-through-https
    port: 8243
    protocol: TCP
    targetPort: 8243
  - name: servlet-http
    port: 9763
    protocol: TCP
    targetPort: 9763
  - name: servlet-https
    port: 9443
    protocol: TCP
    targetPort: 9443
  - name: ws
    port: 9099
    protocol: TCP
    targetPort: 9099
  - name: wss
    port: 8099
    protocol: TCP
    targetPort: 8099
  - name: websub
    port: 9021
    protocol: TCP
    targetPort: 9021
  - name: websub-secure
    port: 8021
    protocol: TCP
    targetPort: 8021
  selector:
    deployment: apim-gw-wso2am-universal-gw
  sessionAffinity: None
  type: ClusterIP
